--- a/scene/two/the-forest-behind-the-trees/index.html
+++ b/scene/two/the-forest-behind-the-trees/index.html
@@ -13,18 +13,18 @@
 
   <title>Animat Habitat project broadcast.</title>
 
+  <style>
+    html { background-color:#111; }
+  </style>
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
 
   <link rel="icon" href="../../../inc/ico/oafa.mark.1.1.72.two.png" />
 
-  <style>
-    html { background-color:#111; }
-  </style>
-
 </head>
 
-<body class="single" id="scene-one">
+<body class="single" id="scene-two">
 
   <nav>
     <ul class="page">
@@ -47,8 +47,6 @@
         <h3>The Trees</h3>
         <p>Article in review.</p>
 
-        <!-- <h3>The Forest</h3> -->
-
       </div>
 
       <div class="clear navigation post-navigation" role="navigation">
@@ -57,7 +55,7 @@
           <a class="nav-next" href="../the-beginning-of-exhibition/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ The Beginning of Exhibition</font></a>
         </div>
       </div>
-      
+
     </article><br class="clear">
   </section>
 
