--- a/scene/one/elephant-conservation-angola/index.html
+++ b/scene/one/elephant-conservation-angola/index.html
@@ -36,6 +36,9 @@
 
   <section>
     <article>
+      <img alt="" src="../../../inc/img/01/photograph/ng/national-geographic-documentary-films.into-the-okavango.9.jpg" />
+      <p class="text-right gutter-side">&ldquo;A group of elephants in the Okavango Delta wades through water&hellip;&rdquo; Botswana &copy; Cory Richards [<a href="../../../url/-com/nationalgeographic-into-the-okavango/" target="_blank" title="National Geographic Documentary Films / Into the Okavango">films.nationalgeographic.com</a>]</p>
+
       <div>
         <h4 class="letterhead thin">December 2021</h4>
         <h2 class="scene-one">Ghost Elephants in Angola</h2>
@@ -56,9 +59,6 @@
         <p>In partnership with National Geographic Society, Wild Bird Trust presents a human history of the Okavango delta in the podcast: <em>Guardians of the River</em> (2021). The podcast is hosted by <u>Kerllen Costa</u>, program director for NGOWP Angola. The podcast explores <em>how to protect some of the most remote and wild places on the planet, starting with the Okavango delta and the source lakes.</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Wild Bird Trust">1</a>]</sup></p>
 
       </div>
-
-      <img alt="" src="../../../inc/img/01/photograph/ng/national-geographic-documentary-films.into-the-okavango.9.jpg" />
-      <p class="text-right gutter-side lineend">&ldquo;A group of elephants in the Okavango Delta wades through water&hellip;&rdquo; Botswana &copy; Cory Richards [<a href="../../../url/-com/nationalgeographic-into-the-okavango/" target="_blank" title="National Geographic Documentary Films / Into the Okavango">films.nationalgeographic.com</a>]</p>
 
       <div class="color quote">
         <h4><font class="color text-quote">&ldquo;</font><em>The life is the water, and the water knows no borders. It twists and turns through Angola and Namibia, until it converges in Botswana, spreading into one mighty freshwater delta called the Okavango. The delta, and the rivers that feed it, are the beating heart of water for three countries in southern Africa, thousands of elephants, millions of birds, hundreds of hippos&hellip; But sometimes the water does not fill the delta and no one really knows why. For centuries, during the driest parts of the year, seasonal floods have interrupted the Kalahari desert&mdash;the largest continuous stretch of sand on the planet. Without the water, the desert takes over. The reeds choke the channels, and the animals and the people wander inwards, deeper and deeper, searching. [&hellip;] And what if all of a sudden, it stopped?&nbsp;</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Kerllen Costa, <em>Guardians of the River</em> e/1: &lsquo;Power to Protect&rsquo; (2021) [<a class="color" href="../../../url/-com/wildbirdtrust-guardians-of-the-river/" rel="noopener" target="_blank" title="Wild Bird Trust / Guardians of the River">wildbirdtrust.com</a>]</font></h4>
