--- a/scene/one/elephant-conservation-botswana/index.html
+++ b/scene/one/elephant-conservation-botswana/index.html
@@ -116,13 +116,13 @@
       <img alt="" src="../../../inc/img/01/photograph/ewb.ele-eyes.jpg" />
       <p class="text-right gutter-side">Elephant &copy; Elephants Without Borders [<a href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">elephantswithoutborders.org</a>]</p>
 
-      <div class="clear-bottom">
-        <h3 class="linebreak">Botswana Without Borders</h3>
+      <div>
+        <h3>Botswana Without Borders</h3>
         <p>By 2007, Michael Chase and Kelly Landen had co-founded Elephants Without Borders (EWB) and managed nearly fifty fitted satellite collars on elephants in northern Botswana, Namibia and Zambia. In 2007, this was the largest telemetry study of elephants. These telemetry studies, coupled with population assessments and trends brought to light in the aerial surveys undertaken by EWB, were used to delineate the boundaries of the Kavango-Zambezi Transfrontier Conservation Area&mdash;the agreement under which Botswana, Namibia, Zambia, Zimbabwe and Angola formally acknowledged that wildlife conservation transcended national boundaries.</p>
 
         <p class="linebreak">By 2011, an aerial survey commissioned by the Botswana department of wildlife and national parks, conceptualized and led by Michael Chase and Kelly Landen of Elephants Without Borders, &ldquo;[made evident] a catastrophic loss of wildlife,&rdquo; according to Chase, eleven species were in serious decline in the delta. The declines were a result of a complex mix of local causes: human encroachment, game fences and poaching, fires and drought and so on. Elephants, however, were bucking the trend. Chase had an explanation:</p>
 
-        <div>
+        <div class="clear-bottom">
           <p>&ldquo;We found the number of elephants in northern Botswana has stabilised at about 130,000. One reason is that they're returning to Angola. The country is remembered by a generation of elephants still alive today. They recognise the pathways to food and water and the timing of seasons. They remember where the hunters are. In a sense, they're Angolan refugees returning home.&rdquo;</p>
 
           <p class="linebreak">&ldquo;The bulls are the scouts, leaving the vicinity of Botswana's conservation areas on exploration journeys. They move from the delta up the Kwando River, streak across the Caprivi at night and into Angola. They find it's pristine, with few people. There are thought to be millions of landmines in south-east Angola. I don't know how they avoid them &ndash; probably by smell &ndash; but they do. Then they return and fetch the family herds. [&hellip;] They look for food and water, but they're also searching for peaceful sanctuaries far from humans.&rdquo;</p>
@@ -143,7 +143,7 @@
       <p class="text-right gutter-side lineend">Okavango &copy; Elephants Without Borders [<a href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">elephantswithoutborders.org</a>]</p>
 
       <div>
-        <h3 class="linebreak" id="don-pinnock-header">Today&hellip; in Botswana</h3>
+        <h3 id="don-pinnock-header">Today&hellip; in Botswana</h3>
 
         <p>Once again from his chapter on Botswana in <em>The Last Elephants</em>, &lsquo;Making a safe haven&rsquo;, Colin Bell sets the stage for the state of elephants in Botswana today:</p>
 
