--- a/scene/one/elephant-conservation-nairobi/index.html
+++ b/scene/one/elephant-conservation-nairobi/index.html
@@ -95,12 +95,12 @@
       </div>
 
       <div class="clear diptych">
-        <div>
+        <div class="clear-bottom">
           <img alt="" src="../../../inc/img/01/photograph/swt/2017.51117.kiasa-getting-stronger.jpg" class="matte">
           <p class="text-right">&ldquo;Kiasa getting stronger.&rdquo; Nairobi Nursery, 2017 &copy; SWT</p>
         </div>
 
-        <div>
+        <div class="clear-bottom">
           <img alt="" src="../../../inc/img/01/photograph/swt/2017.74653.kiasa-keeping-distance.jpg" class="matte">
           <p class="text-right">&ldquo;Kiasa keeping her distance.&rdquo; Nairobi Nursery, 2017 &copy; SWT</p>
         </div>
@@ -110,7 +110,7 @@
       <div>
         <p>Since she arrived at the nursery, Kiasa has kept the Keepers and matriarch elephants on their toes, sneaking away from the herd during the day and causing mayhem at milk feeds.</p>
 
-        <div>
+        <div class="clear-bottom">
           <pre class="thin"></pre>
           <p class="scene-one title">August 2018</p>
           <p><b>Kiasa</b> is still as naughty as ever at feeding times, and is still brought in last for the milk feeds. She is determined to try and steal another bottle from her age mates once she is finished, forcing the Keepers and other elephants still feeding to turn in tight circles to try and avoid her demands. The matriarch Tagwa keeps a vigilant eye on <b>Kiasa</b> and does try to instill some discipline where she can, chasing <b>Kiasa</b> away from the group when she is causing too much trouble.</p>
@@ -119,12 +119,12 @@
       </div>
 
       <div class="clear diptych">
-        <div>
+        <div class="clear-bottom">
           <img alt="" src="../../../inc/img/01/photograph/swt/2018.81541.kiasa-happy-settled-girl.jpg" class="matte">
           <p class="text-right">&ldquo;Happy settled girl.&rdquo; Nairobi Nursery, 2018 &copy; SWT</p>
         </div>
 
-        <div>
+        <div class="clear-bottom">
           <img alt="" src="../../../inc/img/01/photograph/swt/2018.95826.kiasa-sucking-her-trunk.jpg" class="matte">
           <p class="text-right">&ldquo;Kiasa sucking her trunk.&rdquo; Nairobi Nursery, 2018 &copy; SWT</p>
         </div>
@@ -335,12 +335,12 @@
       </div>
 
         <div class="clear diptych">
-          <div>
+          <div class="clear-bottom">
             <img alt="" src="../../../inc/img/01/art/angela-sheldrick/water-colour.2018.10.jpg" class="trim">
             <p class="text-right">Angela Sheldrick Water Colour, October 2018 &copy; SWT [<a href="../../../url/-org/sheldrickwildlifetrust-water-colours/" target="_blank" title="Sheldrick Wildlife Trust / Water Colours">sheldrickwildlifetrust.org</a>]</p>
           </div>
 
-          <div>
+          <div class="clear-bottom">
             <img alt="" src="../../../inc/img/01/art/angela-sheldrick/water-colour.2018.11.jpg" class="trim">
             <p class="text-right">Angela Sheldrick Water Colour, November 2018 &copy; SWT [<a href="../../../url/-org/sheldrickwildlifetrust-water-colours/" target="_blank" title="Sheldrick Wildlife Trust / Water Colours">sheldrickwildlifetrust.org</a>]</p>
           </div>
@@ -348,11 +348,10 @@
         </div>
 
       <div>
-
         <h3>The David Sheldrick Wildlife Trust</h3>
         <p>In this first year following Kiasa at the Nursery, in April 2018, Dame Daphne Sheldrick passed away at the age of 83. Angela Sheldrick now carries on the organization in the name of both her parents, Daphne and David. Angela had effectively taken on this leadership role in the early 2000s, and had since become the voice of the organization, in particular the Orphans' Project, through her water color paintings of baby elephants. The water color paintings of Angela Sheldrick are a lovely reflection of the care provided at the nursery. Angela addressed the Trust in remembrance of the life and legacy of her mother:</p>
 
-        <div>
+        <div class="clear-bottom">
           <p>&ldquo;Daphne touched countless lives&mdash;from generations of elephants who are thriving today through her trailblazing conservation work, to people all over the world who drew inspiration from her. She is testament to the difference that a single person can make, and her legacy lives on as we continue to protect and preserve wildlife in her memory. [&hellip;] Through her autobiography (An African Love Story - Love, Life and Elephants), other books, articles, lectures and television appearances, Daphne has promoted wildlife conservation worldwide.&rdquo;<sup>&nbsp;[<a class="button" onclick="fn();" title="SWT, Family, 2019">1</a>]</sup></p>
         </div>
 
