--- a/scene/one/technology-documentary-2/index.html
+++ b/scene/one/technology-documentary-2/index.html
@@ -53,16 +53,16 @@
         <h4><font class="color text-quote">&ldquo;</font><em>For thousands of years, [elephants] were thought to be able to summon the rain. The truth is that [a matriarch] could sense rain coming when it was over a hundred miles away.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Chiwetel Ejiofor, narrator of <em>The Elephant Queen</em> (2018)</font></h4>
       </div>
 
-      <div>
-        <p>The film takes advantage of a feature length narrative arc to consider the dynamic of a family unit and the ecosystems that surround them. This gives time to connect with individual elephants in the herd, and gives weight to the responsibility of a matriarch to lead the way to food and to water, and in an unrelenting habitat and so on. This familiar journey of an elephant herd in Africa is realized as an individual story of a wise and gentle matriarch named Athena. The film is narrated by Chiwetel Ejiofor, who gives voice to the journey of Athena and her family, and mixed with a score that creates space for the imagery to fill in beats of the story in-between. <em><em>The Elephant Queen</em> (2018) turns the plight of elephants in a ravaged landscape into a relatable story of survival.</em></p>
+      <div class="clear">
+        <img alt="The Elephant Queen key art (16 by 9)" src="../../../inc/img/01/title/apple-tv.the-elephant-queen.key-art.16-9.jpg" />
+        <p class="text-right gutter-side"><em>The Elephant Queen</em> (2018) &copy; Apple TV Plus [<a href="../../../url/-com/theelephantqueen/" title="The Elephant Queen" target="_blank" rel="noopener">theelephantqueen.com</a>]</p>
 
       </div>
 
-      <img alt="The Elephant Queen key art (16 by 9)" src="../../../inc/img/01/title/apple-tv.the-elephant-queen.key-art.16-9.jpg" />
-      <p class="text-right gutter-side"><em>The Elephant Queen</em> (2018) &copy; Apple TV Plus [<a href="../../../url/-com/theelephantqueen/" title="The Elephant Queen" target="_blank" rel="noopener">theelephantqueen.com</a>]</p>
-
       <div>
-        <p>The film is not specific about location. Red earth and a feature appearance of Satao hint at where the &lsquo;refuge&rsquo; is, and at where the &lsquo;kingdom&rsquo; for Athena's family may be. This story of migration throughout the wet and dry seasons is common however to elephants across Africa. The film is able to overlook this local context in favor of building on the characters within an individual family group, including the wildlife around them, and indeed featuring a legend: Satao, one of the last of the big tuskers. The treatment of Satao in this film, entering the frame and incidentally revealing his part role in the story of Athena, was clearly a meaningful moment for the film-makers and an absolute masterclass of wildlife film-making. The sequence with Satao is an exclamation mark on a beautiful, bittersweet story that reads like a love letter to elephants.</p>
+        <p>The film takes advantage of a feature length narrative arc to consider the dynamic of a family unit and the ecosystems that surround them. This gives time to connect with individual elephants in the herd, and gives weight to the responsibility of a matriarch to lead the way to food and to water, and in an unrelenting habitat and so on. This familiar journey of an elephant herd in Africa is realized as an individual story of a wise and gentle matriarch named Athena. The film is narrated by Chiwetel Ejiofor, who gives voice to the journey of Athena and her family, and mixed with a score that creates space for the imagery to fill in beats of the story in-between. <em><em>The Elephant Queen</em> (2018) turns the plight of elephants in a ravaged landscape into a relatable story of survival.</em></p>
+
+        <p class="linebreak">The film is not specific about location. Red earth and a feature appearance of Satao hint at where the &lsquo;refuge&rsquo; is, and at where the &lsquo;kingdom&rsquo; for Athena's family may be. This story of migration throughout the wet and dry seasons is common however to elephants across Africa. The film is able to overlook this local context in favor of building on the characters within an individual family group, including the wildlife around them, and indeed featuring a legend: Satao, one of the last of the big tuskers. The treatment of Satao in this film, entering the frame and incidentally revealing his part role in the story of Athena, was clearly a meaningful moment for the film-makers and an absolute masterclass of wildlife film-making. The sequence with Satao is an exclamation mark on a beautiful, bittersweet story that reads like a love letter to elephants.</p>
 
         <p class="linebreak">The film is dedicated to the memory of Satao and Athena. Satao was killed by poachers during the making of this film. He was the world's largest tusker.</p>
 
@@ -97,8 +97,11 @@
         <h4><font class="color text-quote">&ldquo;</font><em>Communities along the water tower have maintained a lifestyle intertwined with the rivers and the ecosystem they support. But as land mines from the decades-long civil war are decommissioned and more roads open up, the outside world is encroaching into these isolated communities and the surrounding wilderness. As a result, the illegal commercial bush-meat trade has picked up, as have unregulated development, charcoal production, and logging.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;National Geographic Okavango Wilderness Project [<a class="color" href="../../../url/-org/nationalgeographic-okavango-what/" rel="noopener" target="_blank" title="National Geographic Society / Okavango Wilderness Project &ndash; What We're Doing">nationalgeographic.org</a>]</font></h4>
       </div>
 
-      <img alt="Into the Okavango title" src="../../../inc/img/01/title/national-geographic.into-the-okavango.banner.jpg" />
-      <p class="text-right gutter-side"><em>Into the Okavango</em> (2018) &copy; National Geographic Documentary Films [<a href="../../../url/-com/nationalgeographic-into-the-okavango/" title="Into the Okavango (documentary film, 2018)" target="_blank" rel="noopener">films.nationalgeographic.com</a>]</p>
+      <div class="clear">
+        <img alt="Into the Okavango title" src="../../../inc/img/01/title/national-geographic.into-the-okavango.banner.jpg" />
+        <p class="text-right gutter-side"><em>Into the Okavango</em> (2018) &copy; National Geographic Documentary Films [<a href="../../../url/-com/nationalgeographic-into-the-okavango/" title="Into the Okavango (documentary film, 2018)" target="_blank" rel="noopener">films.nationalgeographic.com</a>]</p>
+
+      </div>
 
       <div>
         <p><em>Drag!</em></p>
