--- a/scene/one/technology-documentary-big-tuskers/index.html
+++ b/scene/one/technology-documentary-big-tuskers/index.html
@@ -45,7 +45,7 @@
 
       </div>
 
-      <img alt="Last of the Big Tuskers title" src="https://periwinkle.blue/dane/inc/img/~/umboko-productions/lotbt-cover-1.4.spot.header.jpg" />
+      <img alt="Last of the Big Tuskers title" src="https://danealeksander.github.io/inc/img/copy/umboko-productions/lotbt-cover-1.4.spot.header.jpg" />
       <p class="text-right gutter-side"><em>Last of the Big Tuskers</em> cover art &copy; Umboko Productions</p>
 
       <div>
