--- a/scene/one/technology-documentary/index.html
+++ b/scene/one/technology-documentary/index.html
@@ -108,8 +108,11 @@
 
       </div>
 
-      <img alt="Before the Flood banner" src="../../../inc/img/01/title/national-geographic.before-the-flood.banner.jpg" />
-      <p class="text-right gutter-side"><em>Before the Flood</em> title image &copy; National Geographic Documentary Films [<a href="../../../url/-com/beforetheflood/" title="Before the Flood (documentary film, 2016)" target="_blank" rel="noopener">beforetheflood.com</a>]</p>
+      <div class="clear">
+        <img alt="Before the Flood banner" src="../../../inc/img/01/title/national-geographic.before-the-flood.banner.jpg" />
+        <p class="text-right gutter-side"><em>Before the Flood</em> title image &copy; National Geographic Documentary Films [<a href="../../../url/-com/beforetheflood/" title="Before the Flood (documentary film, 2016)" target="_blank" rel="noopener">beforetheflood.com</a>]</p>
+
+      </div>
 
       <div>
         <p><em>Before the Flood</em> (2016) is again similar to <em>Virunga</em> (2014) in the way its narrative conflict vilifies fossil fuel interests: in this case, namely the Koch brothers who have financed an echo chamber of climate change denialism. In an interview in the film, professor of Atmospheric Science at Penn State University, Michael E. Mann brings this corruption into question: &ldquo;These people are engaged in an effort to lead us astray &ndash; in the name of short term fossil fuel profits &ndash; so that we end up leaving behind a degraded planet. What could be more immoral than that?&rdquo;<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Mann">3</a>]</sup></p>
@@ -204,8 +207,11 @@
         <h4><font class="color text-quote">&ldquo;</font><em>Fencing development is the future when you look at Africa. There is no choice involved, it is going to happen, and people of Africa want the same things that everyone else wants. They want to be able to have a TV. They want to have a house, which is not knocked over. They want to be able to store their food in an area where an animal does not get in there and finish it. Internet, which no one really has yet, and without it, these guys are never going to agree to living with wildlife unless they get the best of both worlds.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Craig Miller, head of security at Big Life Foundation. <em>The Ivory Game</em> (2016)</font></h4>
       </div>
 
-      <img alt="The Ivory Game lockup" src="../../../inc/img/01/title/netflix.the-ivory-game.lockup.png" />
-      <p class="text-right gutter-side"><em>The Ivory Game</em> lockup &copy; Vulcan Productions [<a href="../../../url/-com/theivorygame/" title="The Ivory Game (documentary film, 2016)" target="_blank" rel="noopener">theivorygame.com</a>]</p>
+      <div class="clear">
+        <img alt="The Ivory Game lockup" src="../../../inc/img/01/title/netflix.the-ivory-game.lockup.png" />
+        <p class="text-right gutter-side"><em>The Ivory Game</em> lockup &copy; Vulcan Productions [<a href="../../../url/-com/theivorygame/" title="The Ivory Game (documentary film, 2016)" target="_blank" rel="noopener">theivorygame.com</a>]</p>
+
+      </div>
 
       <div>
         <p>The original score as well as the graphical overlays underpin the three story lines throughout the documentary. The score features a soundtrack by <a href="../../../url/www/hscottsalinas-the-ivory-game/" title=">H. Scott Salinas / The Ivory Game" target="_blank" rel="noopener">H. Scott Salinas</a>, which breaks away from an investigative tone and into passages of sweeping orchestral music that pair with the parts of the film nearer to nature documentary. The graphical overlays &ndash; also the graphics for the <a href="../../../url/vimeo/191002515/" title="Vimeo / Kaiserlicht / The Ivory Game - Title Sequence" target="_blank" rel="noopener">Title Sequence</a> &ndash; were created by <a href="../../../url/www/kaiserlicht-the-ivory-game/" title="Kaiserlicht / The Ivory Game" target="_blank" rel="noopener">Kaiserlicht</a>. The opening title sequence references footage of ivory stockpiles exhibited toward the end of the film. The sequence was directed to echo the ivory trade route, visualizing various maps of countries sculpted into the raw ivory tusks. The opening of the film establishes a material context as well as geographical context for the film., which places an emphasis on the global impact of &ndash; as well as global responsibility for &ndash; the ivory trade.</p>
