--- a/scene/one/elephant-conservation-amboseli/index.html
+++ b/scene/one/elephant-conservation-amboseli/index.html
@@ -64,8 +64,11 @@
 
       </div>
 
-      <iframe src="https://player.vimeo.com/video/215068083?color=ffcf60&title=0&byline=0&portrait=0" class="video" frameborder="0" sandbox="allow-scripts allow-same-origin" allow="autoplay; fullscreen" allowfullscreen></iframe>
-      <p class="text-right gutter-side">&ldquo;Big Life in Action&rdquo; 2014 &copy; Big Life Foundation [<a href="../../../url/-org/biglife-short-films-gallery/" target="_blank" title="Big Life Foundation / Short Films Gallery">biglife.org</a>]</p>
+      <div class="clear">
+        <iframe src="https://player.vimeo.com/video/215068083?color=ffcf60&title=0&byline=0&portrait=0" class="video-extra" frameborder="0" sandbox="allow-scripts allow-same-origin" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        <p class="text-right gutter-side">&ldquo;Big Life in Action&rdquo; 2014 &copy; Big Life Foundation [<a href="../../../url/-org/biglife-short-films-gallery/" target="_blank" title="Big Life Foundation / Short Films Gallery">biglife.org</a>]</p>
+
+      </div>
 
       <div>
         <p><font class="title">Warning</font>: the video includes graphic images. There are also great images and great people doing great work.</p>
@@ -98,7 +101,13 @@
 
         <p class="linebreak">There are no winners of this conflict. Everyone loses.</p>
 
-        <h3 class="linebreak">Wildlife Corridors</h3>
+      </div>
+
+      <img alt="" src="../../../inc/img/01/photograph/nick-brandt/2011.amboseli.line-of-rangers-with-tusks-of-killed-elephants.219252.jpg" />
+      <p class="text-right gutter-side">&ldquo;Line of Rangers with Tusks of Killed Elephants&rdquo; Amboseli, 2011 &copy; Nick Brandt [<a href="../../../url/-com/nickbrandt/" target="_blank" title="Nick Brandt">nickbrandt.com</a>]</p>
+
+      <div>
+        <h3>Wildlife Corridors</h3>
         <p>Elephants like vanilla, and do not like bees. This is a relationship with forest habitats, and an evolved mechanism that helps to protect certain trees. Conservationists have worked with farmers to apply this knowledge in East Africa. Vanilla has been used to encourage elephants to follow new paths along manmade wildlife corridors. Bees have been kept along fences to detract elephants from raiding maze fields and farmlands. Elephant conservationists have used this natural fear to benefit the elephants by placing beehives near farms in order to prevent elephants from foraging in those areas. This approach seems to be helping to minimize incidents of human-elephant conflict.<sup>&nbsp;[<a class="button" onclick="fn();" title="Dupuis-D&eacute;sormeaux and Macdonald, 2012">3</a>,&nbsp;<a class="button" onclick="fn();" title="King, 2018">4</a>]</sup></p>
 
         <p class="linebreak">These are two wonderful examples of measures taken to manage the effects of human expansion on elephant habitat. Big Life continues to focus on innovative conservation solutions, continues to establish rapid-response units dedicated to move elephants away from farmlands, and continues to invest in crop-protection fences to deter elephants from entering farmed areas in the first place.</p>
@@ -110,9 +119,6 @@
         <h4><font class="color">&ldquo;</font><em>Amboseli owes its panoply of wildlife to a tapestry of habitats, from glaciers to alpine meadows forests, woodlands, arid bush, grasslands, swamps, seasonal lakes, lava flows and windswept barren flats flanked by high mountains. To the south the 19,600 feet Kilimanjaro towers over the lowland plains of Amboseli. To the east the young volcanic range of the Chyulus reaches into Tsavo West National Park. To the north rise a series of ever darker and more distant hills stretching to the Kenya highlands.</em><font class="color">&rdquo;</font><font class="color thin"> &mdash;&nbsp;Dr David (Jonah) Western, founder of the African Conservation Center</font></h4>
 
       </div>
-
-      <img alt="" src="../../../inc/img/01/photograph/nick-brandt/2011.amboseli.line-of-rangers-with-tusks-of-killed-elephants.219252.jpg" />
-      <p class="text-right gutter-side">&ldquo;Line of Rangers with Tusks of Killed Elephants&rdquo; Amboseli, 2011 &copy; Nick Brandt [<a href="../../../url/-com/nickbrandt/" target="_blank" title="Nick Brandt">nickbrandt.com</a>]</p>
 
       <div>
         <h3>Across The Ravaged Land</h3>
