--- a/scene/one/book-of-ella-3/index.html
+++ b/scene/one/book-of-ella-3/index.html
@@ -67,7 +67,7 @@
       <div>
         <p>Director of <em>The Blue Umbrella</em>, Saschka Unseld shared his process for the film at SIGGRAPH in Anaheim in 2013. Saschka explained how story gives form to an emotion and the feeling serves to shape the film&mdash;how art direction explores an emotion of a story in pre-production and refocuses on the simplicity of that emotion throughout production. Color is designed over a sequence of frames to visually shape high and low points along the emotional narrative.</p>
 
-        <div>
+        <div class="clear-bottom">
           <p>&ldquo;Prior to Pixar, no animation studio consistently mapped out color and lighting in relation to story and character through a formal colorscripting phase. The process, however, is more than seventy years old, having begun with the early 1940s Disney animated features. The artistic choreography of certain musical sequences in Fantasia, like <em>Toccata and Fugue</em> and <em>Nutcracker Suite</em>, required dozens of color conceptual sketches that effectively served as colorscripts for those sequences. Later, the production design by Tyrus Wong for <em>Bambi</em> advanced the use of color further. Wong's evocative inspirational artwork added an emotional dimension to color and aimed to &lsquo;create the atmosphere, the feeling of the forest,&rsquo; instead of the largely literal and utilitarian expression of color in the earlier full-length Disney features. [&hellip;] The modern resurgence of the colorscript may be traced again to Disney, and one artist in particular, Richard Vander Wende. When Vander Wende painted a colorscript for <em>Aladdin</em>, he had never before seen one. His inspirations were a series a color keys that Eyvind Earle had drawn for a romantic night time scene in <em>Lady and the Tramp</em>, as well as color bars (an abstract cousin of the colorscript) that had been painted for <em>Beauty and the Beast</em>, which was in production at the same time as <em>Aladdin</em>. On a single piece of 8-and-a-half- by 11-and-a-half-inch paper, Vander Wende pinted a couple of dozen thumbnail-sized gouache paintings capturing scenes from the entire film.&rdquo; &mdash;&nbsp;[Amidi, 2011.]</p>
         </div>
 
@@ -99,7 +99,7 @@
       <p class="text-right gutter-side"><em>White Elephant</em> colorscript p. 1-7. (2015)</p>
 
       <div>
-        <p class="linebreak">In a colorscript, in particular, nothing should stand in the way of the story. An artist creates a context for the symbols &ndash; specifically the colors &ndash; that are represented, and stages them consistently to give them meaning. This is a process of keeping the color temperature true to local, neutral color in diffuse light scenes so that the story is not always colorful&mdash;so that when the artist adds color: the color means something.</p>
+        <p>In a colorscript, in particular, nothing should stand in the way of the story. An artist creates a context for the symbols &ndash; specifically the colors &ndash; that are represented, and stages them consistently to give them meaning. This is a process of keeping the color temperature true to local, neutral color in diffuse light scenes so that the story is not always colorful&mdash;so that when the artist adds color: the color means something.</p>
 
       </div>
 
