--- a/scene/one/elephant-anatomy/index.html
+++ b/scene/one/elephant-anatomy/index.html
@@ -135,14 +135,9 @@
 
       </div>
 
-      <br>
-
-      <div class="desktop-feature">
-        <div class="clear ptych-center">
-          <img alt="" src="../../../inc/img/01/photograph/swt.tsavo-02.jpg" />
-          <p class="text-right">Daphne Sheldrick, Tsavo &copy; SWT <a href="../../../url/-org/sheldrickwildlifetrust/" target="_blank" title="Sheldrick Wildlife Trust">sheldrickwildlifetrust.org</a>]</p>
-
-        </div>
+      <div class="clear">
+        <img alt="" src="../../../inc/img/01/photograph/swt.tsavo-02.jpg" />
+        <p class="text-right gutter-side">Daphne Sheldrick, Tsavo &copy; SWT <a href="../../../url/-org/sheldrickwildlifetrust/" target="_blank" title="Sheldrick Wildlife Trust">sheldrickwildlifetrust.org</a>]</p>
 
       </div>
 
