--- a/scene/one/elephant-conservation-angola/index.html
+++ b/scene/one/elephant-conservation-angola/index.html
@@ -185,8 +185,11 @@
 
       </div>
 
-      <iframe src="https://www.youtube.com/embed/c1dlDVoVnqw" class="video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <p class="text-right gutter-side">Angola: The Land at the End of the Earth, 2017 &copy; The HALO Trust</p>
+      <div class="clear">
+        <iframe src="https://www.youtube.com/embed/c1dlDVoVnqw" class="video-extra" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p class="text-right gutter-side">Angola: The Land at the End of the Earth, 2017 &copy; The HALO Trust</p>
+
+      </div>
 
       <div>
         <h3 id="moremi-header">Guardians of the Okavango</h3>
