--- a/scene/one/elephant-conservation-kenya/index.html
+++ b/scene/one/elephant-conservation-kenya/index.html
@@ -36,6 +36,9 @@
 
   <section>
     <article>
+      <img alt="" src="../../../inc/img/01/photograph/2016.kenya.ivory-pile.jpg" />
+      <p class="text-right gutter-side">&lsquo;KWS ranger stands guard in Nairobi National Park&rsquo;, 2016</p>
+
       <div>
         <h4 class="letterhead thin">March 2016</h4>
         <h2 class="scene-one">Elephant Conservation in Kenya</h2>
@@ -46,9 +49,6 @@
         <h3>2016 Ivory Burn, Kenya</h3>
         <p>Nairobi&mdash;In April, the President of Gabon together with the President of Kenya set fire to 105 tons of elephant ivory and more than 1 ton of rhino horn (believed to be the largest stockpile ever destroyed) in a dramatic statement against the trade in ivory and products from endangered species. They say the pyres billowed thick plumes of white smoke over yellow flames that consumed the ivory. This was incited by about twenty thousand litres of jet fuel and oxygen. It was not known how long the burn would last because the burning of such a quantity was unprecedented. The stacks of tusks represented more than six-thousand seven-hundred (6,700) elephants killed for their ivory and three-hundred and forty (340) rhinos killed for their horns, plus endangered animal hides and skins and so on, sandalwood seizures and sacks full of Prunus Africana bark.<sup>&nbsp;[<a class="button" onclick="fn();" title="Zane, 2016">1</a>]</sup></p>
       </div>
-
-      <img alt="" src="../../../inc/img/01/photograph/2016.kenya.ivory-pile.jpg" />
-      <p class="text-right gutter-side lineend">&lsquo;KWS ranger stands guard in Nairobi National Park&rsquo;, 2016</p>
 
       <div class="color quote">
         <h4><font class="color text-quote">&ldquo;</font><em>A time has come when we must take a stand and the stand is clear. [&hellip;] Kenya is making a statement that for us ivory is worthless unless it is on our elephants. This will send an absolutely clear message that the trade in ivory must come to an end and our elephants must be protected. I trust that the world will join us to end the horrible suffering of our herds and save our elephants for future generations.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Uhuru Kenyatta. (2016) Presidential address. Nairobi, Kenya</font></h4>
