--- a/scene/one/making-of-ella-3/index.html
+++ b/scene/one/making-of-ella-3/index.html
@@ -85,16 +85,16 @@
       <img class="trim" alt="White Elephant &lsquo;Ella after the storm.&rsquo; (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.ella-after-the-storm.jpg" />
       <p class="text-right gutter-side">&ldquo;Ella after the storm.&rdquo; (digital paint, 2015) Dane Aleksander</p>
 
-      <div>
+      <!-- <div>
         <p><em>One more thing.</em></p>
 
         <p class="linebreak">Here is a computer-generated render of Ella after the storm. Ella is created with Autodesk Maya and rendered with Mental Ray.</p>
 
-      </div>
+      </div> -->
 
       <!-- <img class="trim" alt="White Elephant render: &lsquo;Ella after the storm.&rsquo; (2019) &copy; Animat Habitat" src="../../../inc/img/01/we.ella-after-the-storm.render.jpg" /> -->
-      <div class="matte"><h4 class="color">Image coming soon.</h4></div>
-      <p class="text-right gutter-side lineend">&ldquo;Ella after the storm.&rdquo; (digital image, 2019)</p>
+      <!-- <div class="matte"><h4 class="color">Image coming soon.</h4></div>
+      <p class="text-right gutter-side lineend">&ldquo;Ella after the storm.&rdquo; (digital image, 2019)</p> -->
 
       <div class="clear">
         <div id="register-toggle">
