--- a/scene/one/technology-documentary-big-tuskers/index.html
+++ b/scene/one/technology-documentary-big-tuskers/index.html
@@ -73,8 +73,11 @@
 
       </div>
 
-      <img alt="Last of the Big Tuskers title" src="../../../inc/img/01/title/last-of-the-big-tuskers.title.png" />
-      <p class="text-right gutter-side"><em>Last of the Big Tuskers</em> title lettering &copy; Umboko Productions [<a href="../../../url/git/bigtuskers/" title="Last of the Big Tuskers / A film by James Currie." target="_blank">bigtuskers.com</a>]</p>
+      <div class="clear">
+        <img alt="Last of the Big Tuskers title" src="../../../inc/img/01/title/last-of-the-big-tuskers.title.png" />
+        <p class="text-right gutter-side"><em>Last of the Big Tuskers</em> title lettering &copy; Umboko Productions [<a href="../../../url/git/bigtuskers/" title="Last of the Big Tuskers / A film by James Currie." target="_blank">bigtuskers.com</a>]</p>
+
+      </div>
 
       <div>
         <p>Tembe Elephant Park, South Africa, has a unique topography: <em>sandforest</em>. This special sandforest shares a border with Mozambique and holds an elephant population with very special characteristics, as Alois Haberhauer, Elephant Geneticist at the University of Kriel, described in the film: &ldquo;a special genetic makeup to produce strong tuskers.&rdquo; Leonard Muller, Elephant Monitor at Ezemvelo KZN Wildlife, also in the film explained the special circumstances for the elephants in Tembe:</p>
